--- a/index.html
+++ b/index.html
@@ -5,35 +5,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HomeWork-1</title>
+    <title>Main_page</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+
+    <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
     <header>
         <nav>
             <!-- Logo -->
-            <a href="./index.html"><span>Web</span>Studio</a>
+            <a class="logo" href="./index.html">WEB<span class="logo-dark">STUDIO</span></a>
 
             <!-- Navigation menu -->
-            <ul>
+            <ul class="navigation list">
                 <li>
-                    <a href="">Studio</a>
+                    <a class="item current" href="./index.html">Studio</a>
                 </li>
                 <li>
-                    <a href="">Portfolio</a>
+                    <a class="item" href="./portfolio.html">Portfolio</a>
                 </li>
                 <li>
-                    <a href="">Contacts</a>
+                    <a class="item" href="">Contacts</a>
                 </li>
             </ul>
         </nav>
         <!-- Contacts -->
-        <ul>
+        <ul class="contacts list">
             <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="item" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
-                <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                <a class="item" href="tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
         </ul>
     </header>
@@ -41,34 +49,37 @@
     <main>
 
         <!-- Hero section -->
-        <section>
-            <h1>Effective Solutions <br> for Your Business</h1>
-            <button type="button">Order Service</button>
+        <section class="hero">
+            <h1 class="hero-title">Effective Solutions <br> for Your Business</h1>
+            <button class="hero-button" type="button">Order Service</button>
         </section>
 
         <!-- Feature section -->
-        <section>
+        <section class="feature">
             <h2>Feature</h2>
-            <ul>
+            <ul class="list">
                 <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business
+                    <h3 class="feature-title">Strategy</h3>
+                    <p class="feature-text">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                    <h3 class="feature-title">Punctuality</h3>
+                    <p class="feature-text">Bring the key message to the brand's audience for the best price within the
+                        shortest possible
                         time.
                     </p>
                 </li>
                 <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                    <h3 class="feature-title">Diligence</h3>
+                    <p class="feature-text">Research and confirm brands that present the strongest digital growth
+                        opportunities and minimize
                         risk.</p>
                 </li>
                 <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                    <h3 class="feature-title">Technologies</h3>
+                    <p class="feature-text">Design practice focused on digital experiences. We bring forth a deep
+                        passion for
                         problem-solving.
                     </p>
                 </li>
@@ -76,9 +87,9 @@
         </section>
 
         <!-- What are we doing section -->
-        <section>
-            <h2>What are we doing</h2>
-            <ul>
+        <section class="doing">
+            <h2 class="doing-title">What are we doing</h2>
+            <ul class="list">
                 <li>
                     <img src="./images/doing/img-1.jpg" alt="What are we doing picture" width="360" height="300">
                 </li>
@@ -92,36 +103,37 @@
         </section>
 
         <!-- Team section -->
-        <section>
-            <h2>Our Team</h2>
-            <ul>
+        <section class="team">
+            <h2 class="team-title">Our Team</h2>
+            <ul class="list">
                 <li>
                     <img src="./images/team/img-1.jpg" alt="Foto" width="264" height="260">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <h3 class="team-name">Mark Guerrero</h3>
+                    <p class="team-desc">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/team/img-2.jpg" alt="Foto" width="264" height="260">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="team-name">Tom Ford</h3>
+                    <p class="team-desc">Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="/images/team/img-3.jpg" alt="Foto" width="264" height="260">
+                    <img src="./images/team/img-3.jpg" alt="Foto" width="264" height="260">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
                     <img src="./images/team/img-4.jpg" alt="Foto" width="264" height="260">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <h3 class="team-name">Daniel Wilson</h3>
+                    <p class="team-desc">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
-        <div>
-            <a href="./index.html"><span>Web</span>Studio</a>
-            <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <div class="footer">
+            <a class="logo" href="./index.html">WEB<span class="logo-white">STUDIO</span></a>
+            <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
+                growth solutions.</p>
         </div>
     </footer>
 </body>
