--- a/index.html
+++ b/index.html
@@ -20,28 +20,28 @@
     <header>
         <nav>
             <!-- Logo -->
-            <a class="logo" href="./index.html">WEB<span class="logo-dark">STUDIO</span></a>
+            <a class="logo list" href="./index.html">WEB<span class="logo-dark">STUDIO</span></a>
 
             <!-- Navigation menu -->
             <ul class="navigation list">
                 <li>
-                    <a class="item current" href="./index.html">Studio</a>
+                    <a class="nav-link current list" href="./index.html">Studio</a>
                 </li>
                 <li>
-                    <a class="item" href="./portfolio.html">Portfolio</a>
+                    <a class="nav-link list" href="./portfolio.html">Portfolio</a>
                 </li>
                 <li>
-                    <a class="item" href="">Contacts</a>
+                    <a class="nav-link list" href="">Contacts</a>
                 </li>
             </ul>
         </nav>
         <!-- Contacts -->
         <ul class="contacts list">
             <li>
-                <a class="item" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="con-link list" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
-                <a class="item" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                <a class="con-link list" href="tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
         </ul>
     </header>
@@ -131,7 +131,7 @@
     </main>
     <footer>
         <div class="footer">
-            <a class="logo" href="./index.html">WEB<span class="logo-white">STUDIO</span></a>
+            <a class="logo list" href="./index.html">WEB<span class="logo-white">STUDIO</span></a>
             <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
                 growth solutions.</p>
         </div>
