--- a/portfolio.html
+++ b/portfolio.html
@@ -20,38 +20,37 @@
     <header>
         <nav>
             <!-- Logo -->
-            <a class="logo" href="./index.html">WEB<span class="logo-dark">STUDIO</span></a>
+            <a class="logo list" href="./index.html">WEB<span class="logo-dark">STUDIO</span></a>
 
             <!-- Navigation menu -->
-            <ul class="navigation list">
+            <ul class="navigation">
                 <li>
-                    <a class="item" href="./index.html">Studio</a>
+                    <a class="nav-link list" href="./index.html">Studio</a>
                 </li>
                 <li>
-                    <a class="item current" href="./portfolio.html">Portfolio</a>
+                    <a class="nav-link current list" href="./portfolio.html">Portfolio</a>
                 </li>
                 <li>
-                    <a class="item" href="">Contacts</a>
+                    <a class="nav-link list" href="">Contacts</a>
                 </li>
             </ul>
         </nav>
         <!-- Contacts -->
         <ul class="contacts list">
             <li>
-                <a class="item" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="con-link list" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
-                <a class="item" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                <a class="con-link list" href="tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
         </ul>
     </header>
 
     <main>
 
-        <h1>Portfolio</h1>
-
         <!-- Filter -->
         <section>
+            <h1>Portfolio</h1>
             <ul class="list">
                 <li>
                     <button class="filter-btn" type="button">All</button>
@@ -74,63 +73,63 @@
 
             <ul class="list">
                 <li>
-                    <a href="">
+                    <a class="list" href="">
                         <img src="./images/portfolio/img1.jpg" alt="row_image" width="360" height="300">
                         <h2 class="card-title">Banking App Interface Concept</h2>
                         <p class="card-desc">App</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a class="list" href="">
                         <img src="./images/portfolio/img2.jpg" alt="row_image" width="360" height="300">
                         <h2 class="card-title">Cashless Payment</h2>
                         <p class="card-desc">Marketing</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a class="list" href="">
                         <img src="./images/portfolio/img3.jpg" alt="row_image" width="360" height="300">
                         <h2 class="card-title">Meditaion App</h2>
                         <p class="card-desc">App</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a class="list" href="">
                         <img src="./images/portfolio/img4.jpg" alt="row_image" width="360" height="300">
                         <h2 class="card-title">Taxi Service</h2>
                         <p class="card-desc">Marketing</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a class="list" href="">
                         <img src="./images/portfolio/img5.jpg" alt="row_image" width="360" height="300">
                         <h2 class="card-title">Screen Illustrations</h2>
                         <p class="card-desc">Design</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a class="list" href="">
                         <img src="./images/portfolio/img6.jpg" alt="row_image" width="360" height="300">
                         <h2 class="card-title">Online Courses</h2>
                         <p class="card-desc">Marketing</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a class="list" href="">
                         <img src="./images/portfolio/img7.jpg" alt="row_image" width="360" height="300">
                         <h2 class="card-title">Instagram Stories Concept</h2>
                         <p class="card-desc">Design</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a class="list" href="">
                         <img src="./images/portfolio/img8.jpg" alt="row_image" width="360" height="300">
                         <h2 class="card-title">Organic Food</h2>
                         <p class="card-desc">Web Site</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a class="list" href="">
                         <img src="./images/portfolio/img9.jpg" alt="row_image" width="360" height="300">
                         <h2 class="card-title">Fresh Coffee</h2>
                         <p class="card-desc">Web Site</p>
@@ -143,7 +142,7 @@
 
     <footer>
         <div class="footer">
-            <a class="logo" href="./index.html">WEB<span class="logo-white">STUDIO</span></a>
+            <a class="logo list" href="./index.html">WEB<span class="logo-white">STUDIO</span></a>
             <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
                 growth solutions.</p>
         </div>
